# scrobblers

./: .gitignore  .travis.yml  .vim.custom  Control-Scrobbler-Algorithm-MPD.html  Control-Scrobbler-Algorithm.html  Control-Scrobbler-Announce.html  Control-Scrobbler-Lastfm.html  Control-Scrobbler-Main.html  Control-Scrobbler-Network.html  Control-Scrobbler-Types.html  Control-Scrobbler.html  LICENSE  README.markdown  README.md  default.nix  doc-index.html  index-frames.html  index.html  liblastfm-scrobbler.cabal  mini_Control-Scrobbler-Algorithm-MPD.html  mini_Control-Scrobbler-Algorithm.html  mini_Control-Scrobbler-Announce.html  mini_Control-Scrobbler-Lastfm.html  mini_Control-Scrobbler-Main.html  mini_Control-Scrobbler-Network.html  mini_Control-Scrobbler-Types.html  mini_Control-Scrobbler.html  package.nix  params.json  scrobbler.cabal  scrobblers.cabal  scrobblers.haddock  scrobblers.nix  shell.nix  stack-8.0.yaml  stack-8.2.yaml  stack.yaml
app/: Client.hs  Remote.hs  Server.hs  scrobblers-app.cabal
app/resources/gentoo/: init.d
examples/: Casual.hs  Hardcore.hs  scrobblers-examples.cabal
src/: Algorithm.hs  Control-Scrobbler-Algorithm-MPD.html  Control-Scrobbler-Algorithm.html  Control-Scrobbler-Announce.html  Control-Scrobbler-Lastfm.html  Control-Scrobbler-Main.html  Control-Scrobbler-Network.html  Control-Scrobbler-Types.html  Control-Scrobbler.html  MPD.hs  Main.hs  Scrobbler.hs  Types.hs
src/Control/: Scrobbler.hs
src/Control/Scrobbler/: Algorithm.hs  Announce.hs  Lastfm.hs  Main.hs  Netwire.hs  Network.hs  Types.hs
src/Control/Scrobbler/Algorithm/: MPD.hs
src/Scrobbler/: Algorithm.hs  Announce.hs  Lastfm.hs  Main.hs  Network.hs  Types.hs
src/Scrobbler/Algorithm/: MPD.hs
tests/: behaviours.hs  bytestringing.hs  networking.hs
