name:                scrobbler
version:             0.1.0.0
synopsis:            Lastfm scrobbler
description:
  Lastfm scrobbler
  .
  Based on @liblastfm@ and @netwire@
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Scrobbler
  other-modules:     Scrobbler.Algorithm
                     Scrobbler.Lastfm
                     Scrobbler.Types
  build-depends:
    base >= 4 && < 5,
    containers,
    liblastfm >= 0.2,
    data-default,
    lens,
    libmpd,
    mtl,
    netwire,
    text,
    time,
    old-locale

executable scrobbler
  default-language:  Haskell2010
  main-is:           src/Main.hs
  build-depends:
    base >= 4 && < 5,
    scrobbler
