name:                scrobbler
version:             0.1.0.0
synopsis:            Lastfm scrobbler
description:
  Lastfm scrobbler
  .
  Based on @liblastfm@ and @netwire@
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Scrobbler
                     Scrobbler.Algorithm.MPD
  other-modules:     Scrobbler.Main
                     Scrobbler.Algorithm
                     Scrobbler.Lastfm
                     Scrobbler.Network
                     Scrobbler.Announce
                     Scrobbler.Types
  build-depends:
    base >= 4 && < 5,
    containers,
    liblastfm >= 0.2,
    http-conduit,
    http-types,
    aeson,
    data-default,
    lens,
    lens-aeson,
    libmpd,
    mtl,
    netwire,
    bytestring,
    text,
    time,
    cereal,
    crypto-api,
    RSA

executable scrobbler
  default-language:  Haskell2010
  main-is:           src/Main.hs
  build-depends:
    base >= 4 && < 5,
    scrobbler
