name:                scrobblers
version:             0.1.0.0
synopsis:            Lastfm scrobblers
description:
  Lastfm scrobblers making library
  .
  Based on @liblastfm@ and @netwire@ (and other twenty packages)
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Control.Scrobbler
                     Control.Scrobbler.Main
                     Control.Scrobbler.Algorithm
                     Control.Scrobbler.Algorithm.MPD
                     Control.Scrobbler.Lastfm
                     Control.Scrobbler.Network
                     Control.Scrobbler.Announce
                     Control.Scrobbler.Types
  build-depends:
    base >= 4 && < 5,
    containers,
    liblastfm >= 0.2,
    http-conduit,
    http-types,
    aeson,
    data-default,
    lens,
    lens-aeson,
    libmpd,
    mtl,
    netwire,
    bytestring,
    text,
    time,
    network,
    cereal,
    crypto-api,
    RSA

test-suite bytestringing
  default-language:  Haskell2010
  build-depends:
    base >= 3 && < 5,
    bytestring,
    text,
    netwire,
    QuickCheck,
    crypto-api,
    RSA,
    scrobblers
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: bytestringing.hs
  ghc-options: -Wall
               -fno-warn-unused-do-bind
