name:                scrobblers
version:             0.1.0.0
synopsis:            Lastfm scrobblers
description:
  Library for making Lastfm scrobblers
  .
  Based on @liblastfm@ and @netwire@ (and other twenty packages)
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Web
build-type:          Simple
extra-source-files:
  README.md
  examples/Casual.hs
  examples/Hardcore.hs
cabal-version:       >= 1.10

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:
    Control.Scrobbler
    Control.Scrobbler.Main
    Control.Scrobbler.Algorithm
    Control.Scrobbler.Algorithm.MPD
    Control.Scrobbler.Lastfm
    Control.Scrobbler.Netwire
    Control.Scrobbler.Network
    Control.Scrobbler.Announce
    Control.Scrobbler.Types
  build-depends:
      aeson
    , base               >= 4 && < 5
    , bytestring
    , cereal
    , cipher-aes128      >= 0.6
    , containers
    , crypto-api         >= 0.13
    , data-default-class
    , exceptions
    , http-conduit
    , http-types
    , lens               >= 4.0.1
    , liblastfm          >= 0.4
    , libmpd             >= 0.8
    , mtl
    , netwire            >= 5
    , network
    , semigroups
    , text
    , time

test-suite bytestringing
  default-language:  Haskell2010
  build-depends:
      base               >= 4 && < 5
    , bytestring
    , cipher-aes128
    , crypto-api
    , hspec
    , mtl
    , netwire
    , QuickCheck
    , scrobblers
    , text
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: bytestringing.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

test-suite behaviours
  default-language:  Haskell2010
  build-depends:
      base               >= 4 && < 5
    , bytestring
    , data-default-class
    , hspec
    , lens
    , netwire
    , network
    , QuickCheck
    , scrobblers
    , text
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: behaviours.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
