name:                scrobblers
version:             0.1.0.0
synopsis:            Lastfm scrobblers
description:
  Library for making Lastfm scrobblers
  .
  Based on @liblastfm@ and @netwire@ (and other twenty packages)
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10
extra-source-files:
  README.markdown
  examples/Casual.hs

source-repository head
  type:     git
  location: https://github.com/supki/scrobblers

library
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Control.Scrobbler
    Control.Scrobbler.Main
    Control.Scrobbler.Algorithm
    Control.Scrobbler.Algorithm.MPD
    Control.Scrobbler.Lastfm
    Control.Scrobbler.Netwire
    Control.Scrobbler.Network
    Control.Scrobbler.Announce
    Control.Scrobbler.Types
  build-depends:
      aeson
    , base               >= 4 && < 5
    , bytestring
    , cereal
    , containers
    , lens-aeson         >= 1
    , exceptions
    , http-client        >= 0.5
    , http-types
    , lens               >= 4.4
    , liblastfm          >= 0.6
    , libmpd             >= 0.8
    , mtl
    , netwire            >= 5
    , network
    , semigroups
    , text
    , time

test-suite bytestringing
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  build-depends:
      base               >= 4 && < 5
    , hspec
    , netwire
    , QuickCheck
    , scrobblers
  hs-source-dirs:
    tests
  main-is:
    bytestringing.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind

test-suite behaviours
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  build-depends:
      base               >= 4 && < 5
    , bytestring
    , hspec
    , lens
    , netwire
    , network
    , QuickCheck
    , scrobblers
  hs-source-dirs:
    tests
  main-is:
    behaviours.hs
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
