name:                scrobblers-app
version:             0.1.0.0
synopsis:            Real world scrobbler
description:
  Real world non-trivial scrobbler example
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >= 1.10

executable scrobbler-server
  default-language:  Haskell2010
  main-is:           Server.hs
  other-modules:     Remote
  build-depends:
    base >= 4 && < 5,
    data-default,
    cereal,
    network,
    lens,
    crypto-api,
    scrobblers

executable scrobbler-client
  default-language:  Haskell2010
  main-is:           Client.hs
  other-modules:     Remote
  build-depends:
    base >= 4 && < 5,
    data-default,
    cereal,
    network,
    lens,
    crypto-api,
    scrobblers
